build: release 25.9.5