@@ -16,15 +16,14 @@ import java.sql.SQLException;
 import java.sql.Statement;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ForkJoinPool;
-import java.util.concurrent.RecursiveAction;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import lombok.Getter;
 import lombok.extern.log4j.Log4j2;
@@ -66,7 +65,8 @@ public class ClickHouseDatabase implements ClickHouse {
                                                Boolean compression,
                                                int batchSize,
                                                int resultSetFetchSize) throws SQLException {
-    List<CProfile> cProfileList = loadSqlColMetadataList(select);
+    String selectTest = select + " LIMIT 1";
+    List<CProfile> cProfileList = loadSqlColMetadataList(selectTest);
 
     List<CProfile> cProfiles = cProfileList.stream()
         .map(cProfile -> cProfile.toBuilder()
@@ -83,7 +83,7 @@ public class ClickHouseDatabase implements ClickHouse {
             .build()).toList();
 
     try {
-      tProfile = dStore.loadJdbcTableMetadata(connection, select,
+      tProfile = dStore.loadJdbcTableMetadata(connection, selectTest,
                                               getSProfile(tableName, tType, iType, aType, compression));
     } catch (TableNameEmptyException e) {
       throw new RuntimeException(e);
@@ -94,8 +94,11 @@ public class ClickHouseDatabase implements ClickHouse {
 
     String select2016template = "SELECT * FROM datasets.trips_mergetree where toYYYYMMDD(pickup_date) = ";
 
-    List<LocalDate> days = start.datesUntil(end).collect(Collectors.toList());
+    List<LocalDate> days = start.datesUntil(end).toList();
     int numBatches = (int) Math.ceil((double) days.size() / batchSize);
+
+    // Use a fixed thread pool with limited parallelism to control memory usage
+    int parallelism = Math.min(batchSize, Runtime.getRuntime().availableProcessors());
 
     for (int i = 0; i < numBatches; i++) {
       int startIndex = i * batchSize;
@@ -104,94 +107,113 @@ public class ClickHouseDatabase implements ClickHouse {
       List<LocalDate> batchDays = days.subList(startIndex, endIndex);
 
       List<LoadDataTask> tasks = new ArrayList<>();
-
       batchDays.forEach(day -> {
-        tasks.add(new LoadDataTask(day, select2016template, cProfileList, cProfiles, resultSetFetchSize));
+        tasks.add(new LoadDataTask(day, select2016template, cProfileList, cProfiles, resultSetFetchSize, dStore, tProfile));
       });
 
-      ForkJoinPool pool = new ForkJoinPool();
-
-      for (LoadDataTask task : tasks) {
-        pool.execute(task);
-      }
-
-      pool.shutdown();
-
-      while (!pool.isTerminated()) {
-        // 1. Implement additional logic here to handle any pseudo "join" operation
-        // 2. Wait while ForkJoinPool will be terminated
-      }
-
-      tasks.forEach(task -> {
-        if (task.getIsDataExist().get()) {
+      // Use fixed parallelism and process tasks with controlled memory usage
+      try (ForkJoinPool pool = new ForkJoinPool(parallelism)) {
+        // Process tasks and handle results incrementally
+        tasks.forEach(task -> {
           try {
-            dStore.putDataDirect(tProfile.getTableName(), task.getListsColStore());
-          } catch (SqlColMetadataException | EnumByteExceedException ex) {
-            throw new RuntimeException(ex);
+            List<List<Object>> taskResult = pool.submit(task).get();
+            if (taskResult != null && !taskResult.isEmpty()) {
+              try {
+                dStore.putDataDirect(tProfile.getTableName(), taskResult);
+              } catch (SqlColMetadataException | EnumByteExceedException ex) {
+                log.error("Error storing data for day {}: {}", task.getDay(), ex.getMessage(), ex);
+              }
+              // Explicitly clear the result to free memory
+              taskResult.forEach(List::clear);
+            }
+          } catch (InterruptedException | ExecutionException e) {
+            Thread.currentThread().interrupt();
+            log.error("Error processing task for day {}: {}", task.getDay(), e.getMessage(), e);
           }
-        }
-      });
+        });
+      }
     }
 
     return cProfiles;
   }
 
-  class LoadDataTask extends RecursiveAction {
+  class LoadDataTask implements Callable<List<List<Object>>> {
     private final LocalDate day;
     private final String selectTemplate;
-    private final List<CProfile> cProfileList;
     private final List<CProfile> cProfiles;
     private final int resultSetFetchSize;
+    private final DStore dStore;
+    private final TProfile tProfile;
 
-    @Getter
-    private final AtomicBoolean isDataExist = new AtomicBoolean(false);
-
-    @Getter
-    private final List<List<Object>> listsColStore = new ArrayList<>();
+    public LocalDate getDay() {
+      return day;
+    }
 
     public LoadDataTask(LocalDate day,
                         String selectTemplate,
                         List<CProfile> cProfileList,
                         List<CProfile> cProfiles,
-                        int resultSetFetchSize) {
+                        int resultSetFetchSize,
+                        DStore dStore,
+                        TProfile tProfile) {
       this.day = day;
-
       this.selectTemplate = selectTemplate;
-      this.cProfileList = cProfileList;
       this.cProfiles = cProfiles;
       this.resultSetFetchSize = resultSetFetchSize;
+      this.dStore = dStore;
+      this.tProfile = tProfile;
     }
 
     @Override
-    protected void compute() {
-      log.info("Start task at: " + LocalDateTime.now());
-
-      cProfileList.forEach(v -> listsColStore.add(new ArrayList<>()));
+    public List<List<Object>> call() {
+      log.info("Start task for day {} at: {}", day, LocalDateTime.now());
 
       DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
       String sDay = day.format(formatter);
       String query = selectTemplate + sDay + " ORDER BY pickup_datetime ASC";
 
-      log.info("Start execution query: " + query);
+      log.info("Executing query: {}", query);
+
+      List<List<Object>> listsColStore = new ArrayList<>();
+      cProfiles.forEach(v -> listsColStore.add(new ArrayList<>()));
+
       try (PreparedStatement ps = connection.prepareStatement(query)) {
         ps.setFetchSize(resultSetFetchSize);
         try (ResultSet r = ps.executeQuery()) {
+          boolean hasData = false;
+          int rowCount = 0;
+
           while (r.next()) {
-            cProfiles.forEach(v -> {
-              try {
-                addToList(listsColStore, v, r);
-              } catch (SQLException e) {
-                throw new RuntimeException(e);
-              }
-            });
-            isDataExist.set(true);
+            for (CProfile v : cProfiles) {
+              addToList(listsColStore, v, r);
+            }
+            hasData = true;
+            rowCount++;
+
+            // Process in smaller chunks to avoid memory buildup
+            if (rowCount % 10000 == 0) {
+              log.debug("Processed {} rows for day {}", rowCount, day);
+            }
+          }
+
+          if (hasData) {
+            log.info("Completed processing day {} with {} rows", day, rowCount);
+            return listsColStore;
+          } else {
+            log.info("No data found for day {}", day);
+            listsColStore.forEach(List::clear);
+            return null;
           }
         }
       } catch (SQLException e) {
-        throw new RuntimeException(e);
+        log.error("Error executing query for day {}: {}", day, e.getMessage(), e);
+        listsColStore.forEach(List::clear);
+        return null;
       }
+    }
 
-      log.info("End task at: " + LocalDateTime.now());
+    private void addToList(List<List<Object>> lists, CProfile v, ResultSet r) throws SQLException {
+      lists.get(v.getColId()).add(r.getObject(v.getColIdSql()));
     }
   }
 
@@ -201,11 +223,11 @@ public class ClickHouseDatabase implements ClickHouse {
                                        IType iType,
                                        AType aType,
                                        Boolean compression,
-                                       int resultSetFetchSize,
-                                       boolean saveMetadataAndExit) throws SQLException {
+                                       int resultSetFetchSize) throws SQLException {
 
     List<List<Object>> listsColStore = new ArrayList<>();
-    List<CProfile> cProfileList = loadSqlColMetadataList(select);
+    String selectTest = select + " LIMIT 1";
+    List<CProfile> cProfileList = loadSqlColMetadataList(selectTest);
 
     cProfileList.forEach(v -> listsColStore.add(v.getColId(), new ArrayList<>()));
 
@@ -224,7 +246,7 @@ public class ClickHouseDatabase implements ClickHouse {
             .build()).toList();
 
     try {
-      tProfile = dStore.loadJdbcTableMetadata(connection, select,
+      tProfile = dStore.loadJdbcTableMetadata(connection, selectTest,
                                               getSProfile(tableName, tType, iType, aType, compression));
     } catch (TableNameEmptyException e) {
       throw new RuntimeException(e);
@@ -263,17 +285,6 @@ public class ClickHouseDatabase implements ClickHouse {
             }
           });
 
-          //////////////////////////
-          if (saveMetadataAndExit) {
-            try {
-              storeResultSetDataToFile(listsColStore);
-
-              break;
-            } catch (IOException e) {
-              throw new RuntimeException(e);
-            }
-          }
-
           isDataExist.set(true);
         }
 
@@ -291,11 +302,6 @@ public class ClickHouseDatabase implements ClickHouse {
 
       listsColStore.clear();
       cProfileList.forEach(v -> listsColStore.add(v.getColId(), new ArrayList<>()));
-
-      //////////////////////////
-      if (saveMetadataAndExit) {
-        break;
-      }
     }
 
     return cProfiles;
@@ -394,7 +400,8 @@ public class ClickHouseDatabase implements ClickHouse {
 
     log.info("Start time: " + LocalDateTime.now());
 
-    List<CProfile> cProfileList = loadSqlColMetadataList(select);
+    String selectTest = select + " LIMIT 1";
+    List<CProfile> cProfileList = loadSqlColMetadataList(selectTest);
 
     List<CProfile> cProfiles = cProfileList.stream()
         .map(cProfile -> cProfile.toBuilder()
@@ -411,7 +418,7 @@ public class ClickHouseDatabase implements ClickHouse {
             .build()).toList();
 
     try {
-      tProfile = dStore.loadJdbcTableMetadata(connection, select, getSProfile(tableName, tType, iType, aType, compression));
+      tProfile = dStore.loadJdbcTableMetadata(connection, selectTest, getSProfile(tableName, tType, iType, aType, compression));
     } catch (TableNameEmptyException e) {
       throw new RuntimeException(e);
     }
@@ -457,10 +464,6 @@ public class ClickHouseDatabase implements ClickHouse {
     storeObjectToFile(listsColStore, "listsColStore.obj");
   }
 
-  private void storeCProfileListToFile(List<CProfile> cProfileList) throws IOException {
-    storeObjectToFile(cProfileList, "sqlColProfileList.obj");
-  }
-
   public List<CProfile> loadSqlColMetadataList(String select) throws SQLException {
     Statement s;
     ResultSet rs;
@@ -490,26 +493,6 @@ public class ClickHouseDatabase implements ClickHouse {
     s.close();
 
     return cProfileList;
-  }
-
-  public long[] getMinMaxTimestampMillis(LocalDate dateFrom, LocalDate dateTo) throws SQLException {
-    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
-    String dateStrFrom = dateFrom.format(formatter);
-    String dateStrTo = dateTo.format(formatter);
-    String query = "SELECT " +
-        "toUnixTimestamp(min(pickup_datetime)) * 1000, " +
-        "toUnixTimestamp(max(pickup_datetime)) * 1000 " +
-        "FROM datasets.trips_mergetree " +
-        "WHERE toYYYYMMDD(pickup_datetime) BETWEEN " + dateStrFrom + " AND " + dateStrTo;
-
-    try (Statement stmt = connection.createStatement();
-        ResultSet rs = stmt.executeQuery(query)) {
-      if (rs.next()) {
-        return new long[]{rs.getLong(1), rs.getLong(2)};
-      } else {
-        throw new SQLException("No results found for date: " + dateFrom + " - " + dateStrTo);
-      }
-    }
   }
 
   public void close() throws SQLException {
